# live-bootcamp-project

./: .dockerignore  Cargo.toml  compose.override.yml  compose.yml  docker.sh
.github/workflows/: prod.yml
app-service/: Cargo.toml  Dockerfile
app-service/src/: main.rs
auth-service/: Cargo.toml  Dockerfile
auth-service/src/: lib.rs  main.rs  routes.rs
auth-service/src/api/: mod.rs  routes.rs
auth-service/src/api/dtos/: requests.rs  responses.rs
auth-service/src/api/handlers/: login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/api/models/: responses.rs
auth-service/src/api/utils/: auth.rs  constants.rs  mod.rs
auth-service/src/domain/: data_stores.rs  error.rs  mod.rs  models.rs  ports.rs  user.rs
auth-service/src/domain/models/: email.rs  login_attempt_id.rs  password.rs  two_fa_code.rs  user.rs
auth-service/src/handlers/: login.rs  logout.rs  root.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/models/: mod.rs  requests.rs  responses.rs
auth-service/src/services/: banned_user_store.rs  hashmap_two_fa_code_store.rs  hashmap_user_store.rs  mock_email_client.rs  mod.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  main.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
