[workspace]
members = [
    "app-service", 
    "auth-service"
]
resolver = "2"

[workspace.dependencies]
askama = "0.14"
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
fake = "4.4.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
validator = { version = "0.20" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
