[package]
name = "app-service"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true, features = ["cookie"] }
tower-http = { workspace = true, features = ["fs"] }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, default-features = false, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
askama = { workspace = true }
