[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
