[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["fs"] }
utoipa = { workspace = true, features = ["axum_extras", "uuid"] }
utoipa-rapidoc = { workspace = true, features = ["axum"] }
uuid = { workspace = true, features = ["v4", "serde"] }
validator = { workspace = true, features = ["derive"] }

[dev-dependencies]
fake = { workspace = true }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json"] }
